--- a/style.css
+++ b/style.css
@@ -27,10 +27,11 @@ body {
     background-color: white;
     display: flex;
     justify-content: space-between;
-    width: 400px;
+    width: 300px;
     height: 50px;
 }
 #clear #GridSize {
-    border: none;
+    border: 1px solid black;
+    background-color: white;
     flex-grow: 1;
 }
