--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ body {
     width: 300px;
     height: 50px;
 }
-#clear #GridSize {
+#clear, #GridSize {
     border: 1px solid black;
     background-color: white;
     flex-grow: 1;
